convert to ENglish done

--- a/web/src/app/shared/components/data-table/data-table.component.html
+++ b/web/src/app/shared/components/data-table/data-table.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-model-search *ngIf="showSearch" (textSearch)="textSearch($event.text,1)" [holder]="'Tìm kiếm ...'"></app-model-search>
+    <app-model-search *ngIf="showSearch" (textSearch)="textSearch($event.text,1)" [holder]="'Search ...'"></app-model-search>
     <div class="portlet light bordered">
 
         <div class="portlet-body" style="overflow-x:auto;">
