--- a/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
+++ b/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
@@ -193,10 +193,10 @@
             </div>
             <div class="col-md-4">
               <div class="form-group">
-                <label class="control-label">Thời gian</label>
+                <label class="control-label">Time</label>
                 <span class="required"> *</span>
                 <div class="input-include-error">
-                  <app-select-dropdown [nameSelect]="formPriceOnime.controls['time'].value" [title]="'Thời gian thuê'"
+                  <app-select-dropdown [nameSelect]="formPriceOnime.controls['time'].value" [title]="'Time'"
                     [selectedIndex]="selectedIndex" [options]="listTime"
                     (selectedOption)="handleDownSelectForPriceOntime($event, 'time')"></app-select-dropdown>
                   <span
