--- a/web/src/app/user/team/team-detail/team-detail.component.html
+++ b/web/src/app/user/team/team-detail/team-detail.component.html
@@ -1,54 +1,68 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Thông tin đội</h1>
+      <h1 class="modal-title">General Information</h1>
     </div>
     <div class="modal-body">
       <form role="form" [formGroup]="formDetail" (ngSubmit)="edit()">
         <div [ngClass]="{'view': view}" class="col-md-12 row">
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tên đội</label>
+              <label class="control-label">Name of team</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="name" formControlName="name">
                 <span
-                  *ngIf="formDetail.controls.name.hasError('required')&&(formDetail.controls['name'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formDetail.controls.name.hasError('required')&&(formDetail.controls['name'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Khu vực</label>
+              <label class="control-label">Area</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formDetail.controls['area'].value" [title]="'Khu vực'"
+                <app-select-dropdown [nameSelect]="formDetail.controls['area'].value" [title]="'Area'"
                   [selectedIndex]="selectedIndex" [options]="listArea"
                   (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
                 <span
-                  *ngIf="formDetail.controls.area.hasError('required')&&(formDetail.controls['area'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formDetail.controls.area.hasError('required')&&(formDetail.controls['area'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Trình độ</label>
+              <label class="control-label">Level</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formDetail.controls['level'].value" [title]="'Trình độ'"
+                <app-select-dropdown [nameSelect]="formDetail.controls['level'].value" [title]="'Level'"
                   [selectedIndex]="selectedIndex" [options]="listLevel"
                   (selectedOption)="handleDownSelect($event, 'level')"></app-select-dropdown>
                 <span
-                  *ngIf="formDetail.controls.level.hasError('required')&&(formDetail.controls['level'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formDetail.controls.level.hasError('required')&&(formDetail.controls['level'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Chọn ảnh đội</label>
+              <label class="control-label">Career</label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
+                <app-select-dropdown [nameSelect]="formDetail.controls['career'].value" [title]="'Career'"
+                  [selectedIndex]="selectedIndex" [options]="listCareer"
+                  (selectedOption)="handleDownSelect($event, 'career')"></app-select-dropdown>
+                <span
+                  *ngIf="formDetail.controls.career.hasError('required')&&(formDetail.controls['career'].touched || errorForm)">Field
+                  required</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label class="control-label">Choose picture</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="file" class="form-control input-lg" name="picture" formControlName="picture"
@@ -58,31 +72,31 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tuổi nhỏ nhất</label>
+              <label class="control-label">Age minimum</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_min" formControlName="age_min">
                 <span
-                  *ngIf="formDetail.controls.age_min.hasError('required')&&(formDetail.controls['age_min'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formDetail.controls.age_min.hasError('required')&&(formDetail.controls['age_min'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tuổi lớn nhất</label>
+              <label class="control-label">Age maximum</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_max" formControlName="age_max">
                 <span
-                  *ngIf="formDetail.controls.age_max.hasError('required')&&(formDetail.controls['age_max'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formDetail.controls.age_max.hasError('required')&&(formDetail.controls['age_max'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Giới thiệu</label>
+              <label class="control-label">Introduce summary</label>
               <div class="input-include-error">
                 <textarea type="textarea" class="form-control input-lg" formControlName="description"></textarea>
               </div>
@@ -91,7 +105,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formDetail.valid">
-                <i class="fas fa-plus-circle"></i> &nbsp;Cập nhật thông tin
+                <i class="fas fa-plus-circle"></i> &nbsp;Update
               </button>
             </div>
           </div>
@@ -102,14 +116,14 @@
 
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Thành viên</h1>
+      <h1 class="modal-title">Members</h1>
     </div>
     <div [ngClass]="{'view': view}" class="modal-body">
       <form role="form" [formGroup]="formAddMember" (ngSubmit)="addMember()">
         <div [ngClass]="{'view': view}" class="col-md-12 row">
           <div class="col-md-8">
             <div class="form-group">
-              <label class="control-label">Email hoặc Số điện thoại</label>
+              <label class="control-label">Email or phone</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="member" formControlName="member">
@@ -119,7 +133,7 @@
           <div class="col-md-4 btn-center">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formAddMember.valid">
-                <i class="fas fa-pen-square"></i> &nbsp;Thêm thành viên
+                <i class="fas fa-pen-square"></i> &nbsp;Add member
               </button>
             </div>
           </div>
