--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -33,6 +33,8 @@
           <a class="dropdown-item" href="team"><i class="fas fa-futbol"></i> &nbsp;MANAGE TEAMS</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="gridiron"><i class="fas fa-futbol"></i> &nbsp;MANAGE GRIDIRONS</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="match"><i class="fas fa-futbol"></i> &nbsp;MANAGE MATCHES</a>
         </div>
       </li>
       <li class="nav-item dropdown" *ngIf="isAdmin">
