--- a/web/src/app/user/profile/profile.component.html
+++ b/web/src/app/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Cập nhật thông tin tài khoản</h1>
+      <h1 class="modal-title">Update information</h1>
     </div>
     <div class="modal-body">
       <div class="row col-md-12">
@@ -18,7 +18,7 @@
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Họ tên</label>
+              <label class="control-label">Fullname</label>
               <div>
                 <input type="text" class="form-control input-lg" name="fullname" formControlName="fullname" value="">
               </div>
@@ -26,13 +26,13 @@
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Số điện thoại</label>
+              <label class="control-label">Phone</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="tel" class="form-control input-lg" name="phone" formControlName="phone" value="">
                 <span
                   *ngIf="profileForm.controls['phone'].hasError('required') && (profileForm.controls['phone'].touched || errorForm ) "
-                  for="phone">Trường bắt buộc</span>
+                  for="phone">Field required</span>
               </div>
             </div>
           </div>
@@ -40,7 +40,7 @@
             <div class="form-group">
               <div class="input-include-error">
                 <button type="submit" class="btn btn-success" [disabled]="!profileForm.valid">
-                  Cập nhật thông tin
+                  Update
                 </button>
                 <span *ngIf="editFaild">{{messageError}}</span>
               </div>
@@ -51,38 +51,38 @@
         <form class="col-md-6" role="form" [formGroup]="changePassForm" (ngSubmit)="changePass()">
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Mật khẩu hiện tại </label>
+              <label class="control-label">Current password</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="currentPassword"
                   formControlName="currentPassword">
                 <span
                   *ngIf="changePassForm.controls['currentPassword'].hasError('required') && (changePassForm.controls['currentPassword'].touched || errorForm ) "
-                  for="currentPassword">Trường bắt buộc</span>
+                  for="currentPassword">Field required</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Mật khẩu mới</label>
+              <label class="control-label">New password</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="newPassword" formControlName="newPassword">
                 <span
                   *ngIf="changePassForm.controls['newPassword'].hasError('required') && (changePassForm.controls['newPassword'].touched || errorForm ) "
-                  for="newPassword">Trường bắt buộc</span>
+                  for="newPassword">Field required</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Xác nhận mật khẩu mới</label>
+              <label class="control-label">Confim Password</label>
               <div class="input-include-error">
                 <input type="password" class="form-control input-lg" name="confirmNewPassword"
                   formControlName="confirmNewPassword">
                 <span
                   *ngIf="(changePassForm.hasError('passwordMatchValidator') || changePassForm.controls['confirmNewPassword'].hasError('required')) &&(changePassForm.controls['confirmNewPassword'].touched || errorForm )"
-                  for="confirmNewPassword">Mật khẩu không trùng khớp</span>
+                  for="confirmNewPassword">Confirm password not match with new password</span>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <div class="form-group">
               <div class="input-include-error">
                 <button type="submit" class="btn btn-success" [disabled]="!changePassForm.valid">
-                  Thay đổi mật khẩu
+                  Update password
                 </button>
                 <span *ngIf="changePassFaild">{{messageError}}</span>
               </div>
@@ -103,80 +103,82 @@
 
 
 
-  <!-- <div *ngIf="isAdmin" class="modal-content">
+  <div *ngIf="isAdmin" class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Quản lí người dùng</h1>
+      <h1 class="modal-title">Manage User</h1>
     </div>
     <div class="modal-body">
-      <form role="form" [formGroup]="formAdd" (ngSubmit)="add()">
+      <form role="form" [formGroup]="formAdd" (ngSubmit)="addAccount()">
         <div class="col-md-12 row">
           <div class="col-md-6">
             <div class="form-group">
               <label class="control-label">Email</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <input type="email" class="form-control input-lg" name="email" formControlName="email">
+                <input type="email" class="form-control input-lg" name="" formControlName="email">
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Họ Tên</label>
-              <span class="required"> *</span>
+              <label class="control-label">Fullname</label>
               <div class="input-include-error">
-                <input type="text" class="form-control input-lg" name="fullname" formControlName="fullname">
+                <input type="text" class="form-control input-lg" name="" formControlName="fullname">
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Số điện thoại</label>
+              <label class="control-label">Phone</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <input type="number" class="form-control input-lg" name="phone" formControlName="phone">
+                <input type="number" class="form-control input-lg" name="" formControlName="phone">
               </div>
             </div>
           </div>
           <div class="col-md-6">
-              <div class="form-group">
-                <label class="control-label">Quyền</label>
-                <span class="required"> *</span>
-                <div class="input-include-error">
-                    <app-select-dropdown [nameSelect]="formAdd.controls['role'].value" [title]="'Chọn phân quyền'"
-                      [selectedIndex]="selectedIndex" [options]="listRole"
-                      (selectedOption)="handleDownSelect($event, 'role')"></app-select-dropdown>
-                    <span
-                      *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Trường
-                      bắt buộc</span>
-                  </div>
+            <div class="form-group">
+              <label class="control-label">Role</label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
+                <app-select-dropdown [nameSelect]="formAdd.controls['role'].value" [title]="'Select role'"
+                  [selectedIndex]="selectedIndex" [options]="listRole"
+                  (selectedOption)="handleDownSelect($event, 'role')"></app-select-dropdown>
+                <span
+                  *ngIf="formAdd.controls.role.hasError('required')&&(formAdd.controls['role'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label class="control-label">Password</label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
+                <input type="password" class="form-control input-lg" name="password" formControlName="password">
+                <span
+                  *ngIf="formAdd.controls['password'].hasError('required') && (formAdd.controls['password'].touched || errorForm ) "
+                  for="newPassword">Field required</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label class="control-label">Confim Password</label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
+                <input type="password" class="form-control input-lg" name="confirmPassword"
+                  formControlName="confirmPassword">
+                <span
+                  *ngIf="(formAdd.hasError('passwordMatchValidatorCreate') || formAdd.controls['confirmPassword'].hasError('required')) &&(formAdd.controls['confirmPassword'].touched || errorForm )"
+                  for="confirmPassword">Confirm password not match with new password</span>
+              </div>
+            </div>
+          </div>
           <div class="col-md-6">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
-                <i class="fas fa-plus-circle"></i> &nbsp;Thêm mới
-              </button>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-    <div class="modal-body" *ngIf="showEditForm">
-      <form role="form" [formGroup]="formEdit" (ngSubmit)="edit()">
-        <div class="col-md-12 row">
-          <div class="col-md-9">
-            <div class="form-group">
-              <label class="control-label">Trình độ</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <input type="text" class="form-control input-lg" name="level" formControlName="level">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 btn-center">
-            <div class="form-group">
-              <button type="submit" class="btn btn-success" [disabled]="!formEdit.valid">
-                <i class="fas fa-pen-square"></i> &nbsp;Cập nhật
+                <i class="fas fa-plus-circle"></i> &nbsp;Create
               </button>
             </div>
           </div>
@@ -189,8 +191,6 @@
           (outputContentStatus)="outputContentStatus($event)" (outputAction)="handleAction($event)"></app-data-table>
       </div>
     </div>
-  </div> -->
-
-
+  </div>
 </div>
 <app-loading></app-loading>
