--- a/web/src/app/user/team/team.component.html
+++ b/web/src/app/user/team/team.component.html
@@ -1,54 +1,68 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Quản lí đội</h1>
+      <h1 class="modal-title">Manage team</h1>
     </div>
     <div class="modal-body">
       <form role="form" [formGroup]="formAdd" (ngSubmit)="add()">
         <div class="col-md-12 row">
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tên đội</label>
+              <label class="control-label">Name of team</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="name" formControlName="name">
                 <span
-                  *ngIf="formAdd.controls.name.hasError('required')&&(formAdd.controls['name'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formAdd.controls.name.hasError('required')&&(formAdd.controls['name'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Khu vực</label>
+              <label class="control-label">Area</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['area'].value" [title]="'Khu vực'"
+                <app-select-dropdown [nameSelect]="formAdd.controls['area'].value" [title]="'Area'"
                   [selectedIndex]="selectedIndex" [options]="listArea"
                   (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
                 <span
-                  *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Trình độ</label>
+              <label class="control-label">Level</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['level'].value" [title]="'Trình độ'"
+                <app-select-dropdown [nameSelect]="formAdd.controls['level'].value" [title]="'Level'"
                   [selectedIndex]="selectedIndex" [options]="listLevel"
                   (selectedOption)="handleDownSelect($event, 'level')"></app-select-dropdown>
                 <span
-                  *ngIf="formAdd.controls.level.hasError('required')&&(formAdd.controls['level'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formAdd.controls.level.hasError('required')&&(formAdd.controls['level'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Chọn ảnh đội</label>
+              <label class="control-label">Career</label>
+              <span class="required"> *</span>
+              <div class="input-include-error">
+                <app-select-dropdown [nameSelect]="formAdd.controls['career'].value" [title]="'Career'"
+                  [selectedIndex]="selectedIndex" [options]="listCareer"
+                  (selectedOption)="handleDownSelect($event, 'career')"></app-select-dropdown>
+                <span
+                  *ngIf="formAdd.controls.career.hasError('required')&&(formAdd.controls['career'].touched || errorForm)">Field
+                  required</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label class="control-label">Choose picture</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="file" class="form-control input-lg" name="picture" formControlName="picture"
@@ -58,31 +72,31 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tuổi nhỏ nhất</label>
+              <label class="control-label">Age minimum</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_min" formControlName="age_min">
                 <span
-                  *ngIf="formAdd.controls.age_min.hasError('required')&&(formAdd.controls['age_min'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formAdd.controls.age_min.hasError('required')&&(formAdd.controls['age_min'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label class="control-label">Tuổi lớn nhất</label>
+              <label class="control-label">Age maximum</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="age_max" formControlName="age_max">
                 <span
-                  *ngIf="formAdd.controls.age_max.hasError('required')&&(formAdd.controls['age_max'].touched || errorForm)">Trường
-                  bắt buộc</span>
+                  *ngIf="formAdd.controls.age_max.hasError('required')&&(formAdd.controls['age_max'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
           <div class="col-md-12">
             <div class="form-group">
-              <label class="control-label">Giới thiệu</label>
+              <label class="control-label">Introduce summary</label>
               <div class="input-include-error">
                 <textarea type="textarea" class="form-control input-lg" formControlName="description"></textarea>
               </div>
@@ -91,15 +105,15 @@
           <div class="col-md-2 btn-center">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
-                <i class="fas fa-plus-circle"></i> &nbsp;Tạo đội
+                <i class="fas fa-plus-circle"></i> &nbsp;Create
               </button>
             </div>
           </div>
           <div class="col-md-8">
-                <div class="input-include-error btn-center">
-                    <span *ngIf="addFaild">{{messageError}}</span>
-                </div>
+            <div class="input-include-error btn-center">
+              <span *ngIf="addFaild">{{messageError}}</span>
             </div>
+          </div>
         </div>
       </form>
     </div>
