match create update and get list

--- a/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
+++ b/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
@@ -144,7 +144,7 @@
                 <span
                   *ngIf="formAddSubGri.controls['name_gridiron'].hasError('required')&&(formAddSubGri.controls['name_gridiron'].touched || errorForm)">Field
                   required</span><br />
-                <span *ngIf="!countName"></span>Name of giridiron div by ',' and it must equlas with number of sub griditon
+                <span *ngIf="!countName"></span>Name of giridiron is divided by ',' and it must equlas with number of sub griditon
               </div>
             </div>
           </div>
