--- a/web/src/app/user/gridiron/gridiron.component.html
+++ b/web/src/app/user/gridiron/gridiron.component.html
@@ -101,4 +101,5 @@
     </div>
   </div>
 </div>
+<app-alert-confirm [id]="'confirm'" [message]="'Are you sure delete this Gridiron?'" (saveConfirm)="saveConfirm()" (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
 <app-loading></app-loading>
