--- a/web/src/app/user/team/team-detail/team-detail.component.html
+++ b/web/src/app/user/team/team-detail/team-detail.component.html
@@ -151,4 +151,5 @@
     </div>
   </div>
 </div>
+<app-alert-confirm [id]="'delete-member'" [message]="'Are you sure delete this member?'" (saveConfirm)="saveConfirm()" (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
 <app-loading></app-loading>
