--- a/web/src/app/shared/components/alert-confirm/alert-confirm.component.html
+++ b/web/src/app/shared/components/alert-confirm/alert-confirm.component.html
@@ -1,7 +1,7 @@
 <app-model-container-view [id]="id" [mode]="mode" [formGroup]="confirmForm" [title]="title" (save)="save()" (error)="error()" (cancel)="cancelForm()">
-    <div *ngIf="messageError">{{messageError | translate}}</div>
+    <div *ngIf="messageError"></div>
     <div class="row">
-        {{message | translate}}
+        <h4>{{message}}</h4>
     </div>
 
 </app-model-container-view>
