--- a/web/src/app/user/profile/profile.component.html
+++ b/web/src/app/user/profile/profile.component.html
@@ -178,7 +178,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
-                <i class="fas fa-plus-circle"></i> &nbsp;Create
+                <i class="fas fa-plus-circle"></i> &nbsp;Create new account
               </button>
             </div>
           </div>
@@ -193,4 +193,5 @@
     </div>
   </div>
 </div>
+<app-alert-confirm [id]="'delete-account'" [message]="'Are you sure delete this account?'" (saveConfirm)="saveConfirm()" (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
 <app-loading></app-loading>
