--- a/web/src/app/user/home/home.component.html
+++ b/web/src/app/user/home/home.component.html
@@ -1,3 +1,145 @@
-<p>
-  home works!
-</p>
+<div class="container-fluid mg-header">
+  <div class="row content">
+    <div class="col-sm-3 sidenav ">
+      <div class="header-sidenav">
+        <h4><i class="fas fa-filter"></i>&nbsp; Filter data</h4>
+        <hr>
+      </div>
+
+      <div class="header-sidenav">
+        <h4><i class="fas fa-map-marked"></i>&nbsp; Area</h4>
+        <hr>
+        <!-- <form> -->
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Hai Chau</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Lien Chieu</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Cam Le</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Thanh Khe</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Ngu Hanh Son</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Thanh Khe</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Ngu Hanh Son</label>
+        </div>
+        <!-- </form> -->
+      </div>
+
+
+      <div class="header-sidenav">
+        <h4><i class="far fa-futbol"></i>&nbsp; Career</h4>
+        <hr>
+        <!-- <form> -->
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Hai Chau</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Lien Chieu</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Cam Le</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Thanh Khe</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Ngu Hanh Son</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Thanh Khe</label>
+        </div>
+        <div class="radio">
+          <label><input type="radio" name="optradio"> Ngu Hanh Son</label>
+        </div>
+        <!-- </form> -->
+      </div>
+    </div>
+
+    <div class="col-sm-9">
+      <div class="col-sm-12 main-content">
+        <div class="header-sidenav">
+          <div class="container">
+            <div class="row input-group">
+              <div class="col-sm-3">
+                <input type="date" class="form-control" min="">
+              </div>
+              <div class="col-sm-7">
+                <input type="text" class="form-control" placeholder="Search team, team leader, gridiron">
+              </div>
+              <div class="col-sm-2">
+                <button style="width: 100%" class="btn btn-success"><i class="fas fa-search"></i>&nbsp;
+                  Search..</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <img src="../../../assets/images/backGround.jpg" class="img-thumbnail" height="70%" width="90%"
+              alt="Avatar">
+          </div>
+          <div class="col-sm-6">
+            <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
+            <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <img src="../../../assets/images/backGround.jpg" class="img-thumbnail" height="70%" width="90%"
+              alt="Avatar">
+          </div>
+          <div class="col-sm-6">
+            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
+            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum
+              dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <img src="../../../assets/images/backGround.jpg" class="img-thumbnail" height="70%" width="90%"
+              alt="Avatar">
+          </div>
+          <div class="col-sm-6">
+            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
+            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum
+              dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <img src="../../../assets/images/backGround.jpg" class="img-thumbnail" height="70%" width="90%"
+              alt="Avatar">
+          </div>
+          <div class="col-sm-6">
+            <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
+            <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum
+              dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
