--- a/web/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/web/src/app/shared/layout/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <app-header (ouputlogin)="login()"></app-header>
-<app-side-nav></app-side-nav>
+<!-- <app-side-nav></app-side-nav> -->
 <!-- content -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
