--- a/web/src/app/user/career/career.component.html
+++ b/web/src/app/user/career/career.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mg-header">
   <div class="modal-content">
     <div class="modal-header">
       <h1 class="modal-title">Manage career</h1>
