--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -13,7 +13,7 @@
           <i class="fas fa-futbol"></i>&nbsp;SEARCH..
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;SEARCH MATCH..</a>
+          <a class="dropdown-item" href="home"><i class="fas fa-futbol"></i> &nbsp;SEARCH MATCH..</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"><i class="fas fa-futbol"></i> &nbsp;SEARCH GRIDIRON..</a>
           <div class="dropdown-divider"></div>
