--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -35,9 +35,9 @@ body {
   color: red;
 }
 
-.row:not(:last-child) {
-  border-bottom: 1px dashed #ebedf2 !important;
-}
+// .row:not(:last-child) {
+//   border-bottom: 1px dashed #ebedf2 !important;
+// }
 
 .clear-fix {
   padding: 15px;
